tests/unit/guardrails/restrict-secret-creation-manual-identity/resources.yaml
apiVersion: v1
kind: Secret
metadata:
  name: manual-secret
  namespace: default
type: Opaque
data:
  password: cGFzc3dvcmQ=
