tests/unit/guardrails/restrict-secret-creation-manual-identity/user-info.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: UserInfo
metadata:
  name: manual-identity
userInfo:
  username: jane-doe
